EXTRA_DIST = \
README.md \
application/.htaccess \
application/config/autoload.php \
application/config/config.php \
application/config/constants.php \
application/config/database/myemsl_status_site_info.sqlite \
application/config/database.php \
application/config/doctypes.php \
application/config/foreign_chars.php \
application/config/hooks.php \
application/config/index.html \
application/config/migration.php \
application/config/mimes.php \
application/config/production/config.php \
application/config/profiler.php \
application/config/routes.php \
application/config/smileys.php \
application/config/user_agents.php \
application/controllers/baseline_controller.php \
application/controllers/cart.php \
application/controllers/index.html \
application/controllers/status.php \
application/controllers/welcome.php \
application/core/index.html \
application/errors/error_404.php \
application/errors/error_db.php \
application/errors/error_general.php \
application/errors/error_php.php \
application/errors/index.html \
application/helpers/file_info_helper.php \
application/helpers/index.html \
application/helpers/item_helper.php \
application/helpers/myemsl_helper.php \
application/helpers/network_helper.php \
application/helpers/opwhse_search_helper.php \
application/helpers/time_helper.php \
application/helpers/user_helper.php \
application/hooks/index.html \
application/index.html \
application/language/english/index.html \
application/libraries/index.html \
application/libraries/Requests/Auth/Basic.php \
application/libraries/Requests/Auth.php \
application/libraries/Requests/Cookie/Jar.php \
application/libraries/Requests/Cookie.php \
application/libraries/Requests/Exception/HTTP/400.php \
application/libraries/Requests/Exception/HTTP/401.php \
application/libraries/Requests/Exception/HTTP/402.php \
application/libraries/Requests/Exception/HTTP/403.php \
application/libraries/Requests/Exception/HTTP/404.php \
application/libraries/Requests/Exception/HTTP/405.php \
application/libraries/Requests/Exception/HTTP/406.php \
application/libraries/Requests/Exception/HTTP/407.php \
application/libraries/Requests/Exception/HTTP/408.php \
application/libraries/Requests/Exception/HTTP/409.php \
application/libraries/Requests/Exception/HTTP/410.php \
application/libraries/Requests/Exception/HTTP/411.php \
application/libraries/Requests/Exception/HTTP/412.php \
application/libraries/Requests/Exception/HTTP/413.php \
application/libraries/Requests/Exception/HTTP/414.php \
application/libraries/Requests/Exception/HTTP/415.php \
application/libraries/Requests/Exception/HTTP/416.php \
application/libraries/Requests/Exception/HTTP/417.php \
application/libraries/Requests/Exception/HTTP/418.php \
application/libraries/Requests/Exception/HTTP/428.php \
application/libraries/Requests/Exception/HTTP/429.php \
application/libraries/Requests/Exception/HTTP/431.php \
application/libraries/Requests/Exception/HTTP/500.php \
application/libraries/Requests/Exception/HTTP/501.php \
application/libraries/Requests/Exception/HTTP/502.php \
application/libraries/Requests/Exception/HTTP/503.php \
application/libraries/Requests/Exception/HTTP/504.php \
application/libraries/Requests/Exception/HTTP/505.php \
application/libraries/Requests/Exception/HTTP/511.php \
application/libraries/Requests/Exception/HTTP/Unknown.php \
application/libraries/Requests/Exception/HTTP.php \
application/libraries/Requests/Exception.php \
application/libraries/Requests/Hooker.php \
application/libraries/Requests/Hooks.php \
application/libraries/Requests/IDNAEncoder.php \
application/libraries/Requests/IPv6.php \
application/libraries/Requests/IRI.php \
application/libraries/Requests/Proxy/HTTP.php \
application/libraries/Requests/Proxy.php \
application/libraries/Requests/Response/Headers.php \
application/libraries/Requests/Response.php \
application/libraries/Requests/Session.php \
application/libraries/Requests/SSL.php \
application/libraries/Requests/Transport/cacert.pem \
application/libraries/Requests/Transport/cURL.php \
application/libraries/Requests/Transport/fsockopen.php \
application/libraries/Requests/Transport.php \
application/libraries/Requests/Utility/CaseInsensitiveDictionary.php \
application/libraries/Requests/Utility/FilteredIterator.php \
application/libraries/Requests.php \
application/models/cart_model.php \
application/models/eus_model.php \
application/models/index.html \
application/models/myemsl_model.php \
application/models/navigation_info_model.php \
application/models/status_model.php \
application/models/user_operations_model.php \
application/third_party/index.html \
application/views/cart_list_insert.html \
application/views/emsl_mgmt_view.php \
application/views/index.html \
application/views/pnnl_template/.svn/all-wcprops \
application/views/pnnl_template/.svn/entries \
application/views/pnnl_template/.svn/format \
application/views/pnnl_template/.svn/text-base/footer.php.svn-base \
application/views/pnnl_template/.svn/text-base/globals.php.svn-base \
application/views/pnnl_template/.svn/text-base/intranet_banner.php.svn-base \
application/views/pnnl_template/.svn/text-base/leftnav.php.svn-base \
application/views/pnnl_template/.svn/text-base/modalbox_setup.php.svn-base \
application/views/pnnl_template/.svn/text-base/rightnav_search.php.svn-base \
application/views/pnnl_template/.svn/text-base/top.php.svn-base \
application/views/pnnl_template/.svn/text-base/view_footer.php.svn-base \
application/views/pnnl_template/.svn/text-base/view_header.php.svn-base \
application/views/pnnl_template/footer.php \
application/views/pnnl_template/globals.php \
application/views/pnnl_template/intranet_banner.php \
application/views/pnnl_template/leftnav.php \
application/views/pnnl_template/modalbox_setup.php \
application/views/pnnl_template/rightnav_search.php \
application/views/pnnl_template/top.php \
application/views/pnnl_template/view_footer.php \
application/views/pnnl_template/view_header.php \
application/views/single_item_view.php \
application/views/status_breadcrumb_insert_view.html \
application/views/upload_item_view.html \
application/views/upload_item_view_backup.html \
application/views/welcome_message.php \
index.php \
prototype.js \
refresh.js \
resources/fonts/opensans/Apache License Version 2.txt \
resources/fonts/opensans/demo.html \
resources/fonts/opensans/open-sans-fontfacekit.zip \
resources/fonts/opensans/OpenSans-Bold-webfont.eot \
resources/fonts/opensans/OpenSans-Bold-webfont.ttf \
resources/fonts/opensans/OpenSans-Bold-webfont.woff \
resources/fonts/opensans/OpenSans-BoldItalic-webfont.eot \
resources/fonts/opensans/OpenSans-BoldItalic-webfont.ttf \
resources/fonts/opensans/OpenSans-BoldItalic-webfont.woff \
resources/fonts/opensans/OpenSans-ExtraBold-webfont.eot \
resources/fonts/opensans/OpenSans-ExtraBold-webfont.ttf \
resources/fonts/opensans/OpenSans-ExtraBold-webfont.woff \
resources/fonts/opensans/OpenSans-ExtraBoldItalic-webfont.eot \
resources/fonts/opensans/OpenSans-ExtraBoldItalic-webfont.ttf \
resources/fonts/opensans/OpenSans-ExtraBoldItalic-webfont.woff \
resources/fonts/opensans/OpenSans-Italic-webfont.eot \
resources/fonts/opensans/OpenSans-Italic-webfont.ttf \
resources/fonts/opensans/OpenSans-Italic-webfont.woff \
resources/fonts/opensans/OpenSans-Light-webfont.eot \
resources/fonts/opensans/OpenSans-Light-webfont.ttf \
resources/fonts/opensans/OpenSans-Light-webfont.woff \
resources/fonts/opensans/OpenSans-LightItalic-webfont.eot \
resources/fonts/opensans/OpenSans-LightItalic-webfont.ttf \
resources/fonts/opensans/OpenSans-LightItalic-webfont.woff \
resources/fonts/opensans/OpenSans-Regular-webfont.eot \
resources/fonts/opensans/OpenSans-Regular-webfont.ttf \
resources/fonts/opensans/OpenSans-Regular-webfont.woff \
resources/fonts/opensans/OpenSans-Semibold-webfont.eot \
resources/fonts/opensans/OpenSans-Semibold-webfont.ttf \
resources/fonts/opensans/OpenSans-Semibold-webfont.woff \
resources/fonts/opensans/OpenSans-SemiboldItalic-webfont.eot \
resources/fonts/opensans/OpenSans-SemiboldItalic-webfont.ttf \
resources/fonts/opensans/OpenSans-SemiboldItalic-webfont.woff \
resources/fonts/opensans/opensans.css \
resources/fonts/opensans/stylesheet.css \
resources/fonts/oxygen/demo.html \
resources/fonts/oxygen/Oxygen SIL OFL Font License 1.1.txt \
resources/fonts/oxygen/Oxygen-Bold-webfont.eot \
resources/fonts/oxygen/Oxygen-Bold-webfont.svg \
resources/fonts/oxygen/Oxygen-Bold-webfont.ttf \
resources/fonts/oxygen/Oxygen-Bold-webfont.woff \
resources/fonts/oxygen/Oxygen-BoldItalic-webfont.eot \
resources/fonts/oxygen/Oxygen-BoldItalic-webfont.svg \
resources/fonts/oxygen/Oxygen-BoldItalic-webfont.ttf \
resources/fonts/oxygen/Oxygen-BoldItalic-webfont.woff \
resources/fonts/oxygen/Oxygen-Italic-webfont.eot \
resources/fonts/oxygen/Oxygen-Italic-webfont.svg \
resources/fonts/oxygen/Oxygen-Italic-webfont.ttf \
resources/fonts/oxygen/Oxygen-Italic-webfont.woff \
resources/fonts/oxygen/Oxygen-webfont.eot \
resources/fonts/oxygen/Oxygen-webfont.svg \
resources/fonts/oxygen/Oxygen-webfont.ttf \
resources/fonts/oxygen/Oxygen-webfont.woff \
resources/fonts/oxygen/oxygen.css \
resources/fonts/oxygen/stylesheet.css \
resources/fonts/sourcesanspro/demo.html \
resources/fonts/sourcesanspro/SIL OFL Font License - Source Sans Pro.txt \
resources/fonts/sourcesanspro/SourceSansPro-Black-webfont.eot \
resources/fonts/sourcesanspro/SourceSansPro-Black-webfont.svg \
resources/fonts/sourcesanspro/SourceSansPro-Black-webfont.ttf \
resources/fonts/sourcesanspro/SourceSansPro-Black-webfont.woff \
resources/fonts/sourcesanspro/SourceSansPro-BlackIt-webfont.eot \
resources/fonts/sourcesanspro/SourceSansPro-BlackIt-webfont.svg \
resources/fonts/sourcesanspro/SourceSansPro-BlackIt-webfont.ttf \
resources/fonts/sourcesanspro/SourceSansPro-BlackIt-webfont.woff \
resources/fonts/sourcesanspro/SourceSansPro-Bold-webfont.eot \
resources/fonts/sourcesanspro/SourceSansPro-Bold-webfont.svg \
resources/fonts/sourcesanspro/SourceSansPro-Bold-webfont.ttf \
resources/fonts/sourcesanspro/SourceSansPro-Bold-webfont.woff \
resources/fonts/sourcesanspro/SourceSansPro-BoldIt-webfont.eot \
resources/fonts/sourcesanspro/SourceSansPro-BoldIt-webfont.svg \
resources/fonts/sourcesanspro/SourceSansPro-BoldIt-webfont.ttf \
resources/fonts/sourcesanspro/SourceSansPro-BoldIt-webfont.woff \
resources/fonts/sourcesanspro/SourceSansPro-ExtraLight-webfont.eot \
resources/fonts/sourcesanspro/SourceSansPro-ExtraLight-webfont.svg \
resources/fonts/sourcesanspro/SourceSansPro-ExtraLight-webfont.ttf \
resources/fonts/sourcesanspro/SourceSansPro-ExtraLight-webfont.woff \
resources/fonts/sourcesanspro/SourceSansPro-ExtraLightIt-webfont.eot \
resources/fonts/sourcesanspro/SourceSansPro-ExtraLightIt-webfont.svg \
resources/fonts/sourcesanspro/SourceSansPro-ExtraLightIt-webfont.ttf \
resources/fonts/sourcesanspro/SourceSansPro-ExtraLightIt-webfont.woff \
resources/fonts/sourcesanspro/SourceSansPro-It-webfont.eot \
resources/fonts/sourcesanspro/SourceSansPro-It-webfont.svg \
resources/fonts/sourcesanspro/SourceSansPro-It-webfont.ttf \
resources/fonts/sourcesanspro/SourceSansPro-It-webfont.woff \
resources/fonts/sourcesanspro/SourceSansPro-Light-webfont.eot \
resources/fonts/sourcesanspro/SourceSansPro-Light-webfont.svg \
resources/fonts/sourcesanspro/SourceSansPro-Light-webfont.ttf \
resources/fonts/sourcesanspro/SourceSansPro-Light-webfont.woff \
resources/fonts/sourcesanspro/SourceSansPro-LightIt-webfont.eot \
resources/fonts/sourcesanspro/SourceSansPro-LightIt-webfont.svg \
resources/fonts/sourcesanspro/SourceSansPro-LightIt-webfont.ttf \
resources/fonts/sourcesanspro/SourceSansPro-LightIt-webfont.woff \
resources/fonts/sourcesanspro/SourceSansPro-Regular-webfont.eot \
resources/fonts/sourcesanspro/SourceSansPro-Regular-webfont.svg \
resources/fonts/sourcesanspro/SourceSansPro-Regular-webfont.ttf \
resources/fonts/sourcesanspro/SourceSansPro-Regular-webfont.woff \
resources/fonts/sourcesanspro/SourceSansPro-Semibold-webfont.eot \
resources/fonts/sourcesanspro/SourceSansPro-Semibold-webfont.svg \
resources/fonts/sourcesanspro/SourceSansPro-Semibold-webfont.ttf \
resources/fonts/sourcesanspro/SourceSansPro-Semibold-webfont.woff \
resources/fonts/sourcesanspro/SourceSansPro-SemiboldIt-webfont.eot \
resources/fonts/sourcesanspro/SourceSansPro-SemiboldIt-webfont.svg \
resources/fonts/sourcesanspro/SourceSansPro-SemiboldIt-webfont.ttf \
resources/fonts/sourcesanspro/SourceSansPro-SemiboldIt-webfont.woff \
resources/fonts/sourcesanspro/sourcesanspro.css \
resources/fonts/sourcesanspro/stylesheet.css \
resources/images/Cassette-44px_skewed.png \
resources/images/Cassette-black-32px_skewed.png \
resources/images/Cassette-black-44px.png \
resources/images/cassette-check-combo.png \
resources/images/disclosure_sprite.gif \
resources/images/disclosure_sprite.png \
resources/images/disclosure_sprite@2x.png \
resources/images/disclosure_sprite@3x.png \
resources/images/document-16.png \
resources/images/doe_seal_plus_name.png \
resources/images/doe_seal_plus_name@2x.png \
resources/images/empty_folder_32.png \
resources/images/footer_tagline.png \
resources/images/footer_tagline@2x.png \
resources/images/intranet_bg.png \
resources/images/intranet_bg@2x.png \
resources/images/intranet_nav_bg.png \
resources/images/orange_folder-16.png \
resources/images/orange_folder-22.png \
resources/images/orange_folder-64.png \
resources/images/pnnl_logo_battelle.png \
resources/images/pnnl_logo_battelle@2x.png \
resources/images/reveal_arrow_down.png \
resources/images/reveal_arrow_up.png \
resources/images/s.gif \
resources/images/spinner-16x16_green.gif \
resources/images/spinner-32x32.gif \
resources/images/spinner-32x32_black.gif \
resources/images/spinner-32x32_green.gif \
resources/json_files/files_156858.json \
resources/json_files/ingest_states_group_156858.json \
resources/json_files/instrument_group_list.json \
resources/json_files/transactions_156858.json \
resources/scripts/emsl_mgmt_view.js \
resources/scripts/fancytree/jquery.fancytree-all.js \
resources/scripts/fancytree/jquery.fancytree-all.min.js \
resources/scripts/fancytree/jquery.fancytree.js \
resources/scripts/fancytree/jquery.fancytree.min.js \
resources/scripts/fancytree/MIT-LICENSE.txt \
resources/scripts/fancytree/skin-awesome/ui.fancytree.css \
resources/scripts/fancytree/skin-awesome/ui.fancytree.less \
resources/scripts/fancytree/skin-awesome/ui.fancytree.min.css \
resources/scripts/fancytree/skin-bootstrap/ui.fancytree.css \
resources/scripts/fancytree/skin-bootstrap/ui.fancytree.less \
resources/scripts/fancytree/skin-bootstrap/ui.fancytree.min.css \
resources/scripts/fancytree/skin-bootstrap-n/ui.fancytree.css \
resources/scripts/fancytree/skin-bootstrap-n/ui.fancytree.less \
resources/scripts/fancytree/skin-bootstrap-n/ui.fancytree.min.css \
resources/scripts/fancytree/skin-lion/icons.gif \
resources/scripts/fancytree/skin-lion/loading.gif \
resources/scripts/fancytree/skin-lion/ui.fancytree.css \
resources/scripts/fancytree/skin-lion/ui.fancytree.less \
resources/scripts/fancytree/skin-lion/ui.fancytree.min.css \
resources/scripts/fancytree/skin-themeroller/icons.gif \
resources/scripts/fancytree/skin-themeroller/loading.gif \
resources/scripts/fancytree/skin-themeroller/ui.fancytree.css \
resources/scripts/fancytree/skin-themeroller/ui.fancytree.min.css \
resources/scripts/fancytree/skin-vista/icons.gif \
resources/scripts/fancytree/skin-vista/loading.gif \
resources/scripts/fancytree/skin-vista/ui.fancytree.css \
resources/scripts/fancytree/skin-vista/ui.fancytree.less \
resources/scripts/fancytree/skin-vista/ui.fancytree.min.css \
resources/scripts/fancytree/skin-win7/icons.gif \
resources/scripts/fancytree/skin-win7/loading.gif \
resources/scripts/fancytree/skin-win7/ui.fancytree.css \
resources/scripts/fancytree/skin-win7/ui.fancytree.less \
resources/scripts/fancytree/skin-win7/ui.fancytree.min.css \
resources/scripts/fancytree/skin-win8/icons.gif \
resources/scripts/fancytree/skin-win8/loading.gif \
resources/scripts/fancytree/skin-win8/ui.fancytree.css \
resources/scripts/fancytree/skin-win8/ui.fancytree.less \
resources/scripts/fancytree/skin-win8/ui.fancytree.min.css \
resources/scripts/fancytree/skin-win8-n/icons.gif \
resources/scripts/fancytree/skin-win8-n/loading.gif \
resources/scripts/fancytree/skin-win8-n/ui.fancytree.css \
resources/scripts/fancytree/skin-win8-n/ui.fancytree.less \
resources/scripts/fancytree/skin-win8-n/ui.fancytree.min.css \
resources/scripts/fancytree/skin-win8-xxl/icons.gif \
resources/scripts/fancytree/skin-win8-xxl/loading.gif \
resources/scripts/fancytree/skin-win8-xxl/ui.fancytree.css \
resources/scripts/fancytree/skin-win8-xxl/ui.fancytree.less \
resources/scripts/fancytree/skin-win8-xxl/ui.fancytree.min.css \
resources/scripts/fancytree/skin-xp/icons-rtl.gif \
resources/scripts/fancytree/skin-xp/icons.gif \
resources/scripts/fancytree/skin-xp/loading.gif \
resources/scripts/fancytree/skin-xp/ui.fancytree.css \
resources/scripts/fancytree/skin-xp/ui.fancytree.less \
resources/scripts/fancytree/skin-xp/ui.fancytree.min.css \
resources/scripts/fancytree/skin-xp/vline-rtl.gif \
resources/scripts/fancytree/skin-xp/vline.gif \
resources/scripts/fancytree/src/jquery.fancytree.childcounter.js \
resources/scripts/fancytree/src/jquery.fancytree.clones.js \
resources/scripts/fancytree/src/jquery.fancytree.columnview.js \
resources/scripts/fancytree/src/jquery.fancytree.debug.js \
resources/scripts/fancytree/src/jquery.fancytree.dnd.js \
resources/scripts/fancytree/src/jquery.fancytree.edit.js \
resources/scripts/fancytree/src/jquery.fancytree.filter.js \
resources/scripts/fancytree/src/jquery.fancytree.glyph.js \
resources/scripts/fancytree/src/jquery.fancytree.gridnav.js \
resources/scripts/fancytree/src/jquery.fancytree.js \
resources/scripts/fancytree/src/jquery.fancytree.menu.js \
resources/scripts/fancytree/src/jquery.fancytree.persist.js \
resources/scripts/fancytree/src/jquery.fancytree.table.js \
resources/scripts/fancytree/src/jquery.fancytree.themeroller.js \
resources/scripts/fancytree/src/jquery.fancytree.wide.js \
resources/scripts/fancytree/src/skin-common.less \
resources/scripts/generic-finder.js \
resources/scripts/jquery/jquery-1.11.2.js \
resources/scripts/jquery/jquery-1.11.2.min.js \
resources/scripts/jquery/jquery-1.11.2.min.map \
resources/scripts/jquery/jquery-1.9.1.js \
resources/scripts/jquery-cookie/jquery.cookie.js \
resources/scripts/jquery-crypt/jquery.crypt.js \
resources/scripts/jquery-dateFormat/.gitignore \
resources/scripts/jquery-dateFormat/.jshintrc \
resources/scripts/jquery-dateFormat/.travis.yml \
resources/scripts/jquery-dateFormat/bower.json \
resources/scripts/jquery-dateFormat/composer.json \
resources/scripts/jquery-dateFormat/dateFormat.js \
resources/scripts/jquery-dateFormat/dateFormat.min.js \
resources/scripts/jquery-dateFormat/dist/dateFormat.js \
resources/scripts/jquery-dateFormat/dist/dateFormat.min.js \
resources/scripts/jquery-dateFormat/dist/jquery-dateFormat.js \
resources/scripts/jquery-dateFormat/dist/jquery-dateFormat.min.js \
resources/scripts/jquery-dateFormat/Gruntfile.js \
resources/scripts/jquery-dateFormat/jquery-dateFormat.js \
resources/scripts/jquery-dateFormat/jquery-dateFormat.min.js \
resources/scripts/jquery-dateFormat/MIT-LICENSE.txt \
resources/scripts/jquery-dateFormat/package.json \
resources/scripts/jquery-dateFormat/README.rdoc \
resources/scripts/jquery-dateFormat/src/dateFormat.js \
resources/scripts/jquery-dateFormat/src/jquery.dateFormat.js \
resources/scripts/jquery-dateFormat/test/expected_inputs_spec.js \
resources/scripts/jquery-dateFormat/test/format_date_spec.js \
resources/scripts/jquery-dateFormat/test/format_parse_date_spec.js \
resources/scripts/jquery-dateFormat/test/format_pretty_date_spec.js \
resources/scripts/jquery-dateFormat/test/issues_spec.js \
resources/scripts/jquery-dateFormat/test/vendor/jquery-1.4.min.js \
resources/scripts/jquery-ui/external/jquery/jquery.js \
resources/scripts/jquery-ui/images/ui-bg_diagonals-thick_18_b81900_40x40.png \
resources/scripts/jquery-ui/images/ui-bg_diagonals-thick_20_666666_40x40.png \
resources/scripts/jquery-ui/images/ui-bg_flat_10_000000_40x100.png \
resources/scripts/jquery-ui/images/ui-bg_glass_100_f6f6f6_1x400.png \
resources/scripts/jquery-ui/images/ui-bg_glass_100_fdf5ce_1x400.png \
resources/scripts/jquery-ui/images/ui-bg_glass_65_ffffff_1x400.png \
resources/scripts/jquery-ui/images/ui-bg_gloss-wave_35_f6a828_500x100.png \
resources/scripts/jquery-ui/images/ui-bg_highlight-soft_100_eeeeee_1x100.png \
resources/scripts/jquery-ui/images/ui-bg_highlight-soft_75_ffe45c_1x100.png \
resources/scripts/jquery-ui/images/ui-icons_222222_256x240.png \
resources/scripts/jquery-ui/images/ui-icons_228ef1_256x240.png \
resources/scripts/jquery-ui/images/ui-icons_ef8c08_256x240.png \
resources/scripts/jquery-ui/images/ui-icons_ffd27a_256x240.png \
resources/scripts/jquery-ui/images/ui-icons_ffffff_256x240.png \
resources/scripts/jquery-ui/index.html \
resources/scripts/jquery-ui/jquery-ui.css \
resources/scripts/jquery-ui/jquery-ui.js \
resources/scripts/jquery-ui/jquery-ui.min.css \
resources/scripts/jquery-ui/jquery-ui.min.js \
resources/scripts/jquery-ui/jquery-ui.structure.css \
resources/scripts/jquery-ui/jquery-ui.structure.min.css \
resources/scripts/jquery-ui/jquery-ui.theme.css \
resources/scripts/jquery-ui/jquery-ui.theme.min.css \
resources/scripts/moment.min.js \
resources/scripts/myemsl_file_download.js \
resources/scripts/select2/bower.json \
resources/scripts/select2/component.json \
resources/scripts/select2/composer.json \
resources/scripts/select2/CONTRIBUTING.md \
resources/scripts/select2/LICENSE \
resources/scripts/select2/package.json \
resources/scripts/select2/README.md \
resources/scripts/select2/release.sh \
resources/scripts/select2/select2-bootstrap.css \
resources/scripts/select2/select2-spinner.gif \
resources/scripts/select2/select2.css \
resources/scripts/select2/select2.jquery.json \
resources/scripts/select2/select2.js \
resources/scripts/select2/select2.min.js \
resources/scripts/select2/select2.png \
resources/scripts/select2/select2_locale_ar.js \
resources/scripts/select2/select2_locale_az.js \
resources/scripts/select2/select2_locale_bg.js \
resources/scripts/select2/select2_locale_ca.js \
resources/scripts/select2/select2_locale_cs.js \
resources/scripts/select2/select2_locale_da.js \
resources/scripts/select2/select2_locale_de.js \
resources/scripts/select2/select2_locale_el.js \
resources/scripts/select2/select2_locale_en.js.template \
resources/scripts/select2/select2_locale_es.js \
resources/scripts/select2/select2_locale_et.js \
resources/scripts/select2/select2_locale_eu.js \
resources/scripts/select2/select2_locale_fa.js \
resources/scripts/select2/select2_locale_fi.js \
resources/scripts/select2/select2_locale_fr.js \
resources/scripts/select2/select2_locale_gl.js \
resources/scripts/select2/select2_locale_he.js \
resources/scripts/select2/select2_locale_hr.js \
resources/scripts/select2/select2_locale_hu.js \
resources/scripts/select2/select2_locale_id.js \
resources/scripts/select2/select2_locale_is.js \
resources/scripts/select2/select2_locale_it.js \
resources/scripts/select2/select2_locale_ja.js \
resources/scripts/select2/select2_locale_ka.js \
resources/scripts/select2/select2_locale_ko.js \
resources/scripts/select2/select2_locale_lt.js \
resources/scripts/select2/select2_locale_lv.js \
resources/scripts/select2/select2_locale_mk.js \
resources/scripts/select2/select2_locale_ms.js \
resources/scripts/select2/select2_locale_nb.js \
resources/scripts/select2/select2_locale_nl.js \
resources/scripts/select2/select2_locale_pl.js \
resources/scripts/select2/select2_locale_pt-BR.js \
resources/scripts/select2/select2_locale_pt-PT.js \
resources/scripts/select2/select2_locale_ro.js \
resources/scripts/select2/select2_locale_rs.js \
resources/scripts/select2/select2_locale_ru.js \
resources/scripts/select2/select2_locale_sk.js \
resources/scripts/select2/select2_locale_sv.js \
resources/scripts/select2/select2_locale_th.js \
resources/scripts/select2/select2_locale_tr.js \
resources/scripts/select2/select2_locale_ug-CN.js \
resources/scripts/select2/select2_locale_uk.js \
resources/scripts/select2/select2_locale_vi.js \
resources/scripts/select2/select2_locale_zh-CN.js \
resources/scripts/select2/select2_locale_zh-TW.js \
resources/scripts/select2/select2x2.png \
resources/scripts/single_item_view.js \
resources/scripts/spinner/spin.min.js \
resources/scripts/status_common.js \
resources/scripts/utility_functions.js \
resources/stylesheets/bread_crumbs.css \
resources/stylesheets/file_directory_styling.css \
resources/stylesheets/local.css \
resources/stylesheets/shared/basic.css \
resources/stylesheets/shared/handheld.css \
resources/stylesheets/shared/pnnl.css \
resources/stylesheets/shared/print.css \
resources/stylesheets/status.css \
resources/stylesheets/status_block_wide.png \
resources/stylesheets/status_style.css \
status_block_wide.png \
status_style.css \
system/.htaccess \
system/core/Benchmark.php \
system/core/CodeIgniter.php \
system/core/Common.php \
system/core/Config.php \
system/core/Controller.php \
system/core/Exceptions.php \
system/core/Hooks.php \
system/core/index.html \
system/core/Input.php \
system/core/Lang.php \
system/core/Loader.php \
system/core/Model.php \
system/core/Output.php \
system/core/Router.php \
system/core/Security.php \
system/core/URI.php \
system/core/Utf8.php \
system/database/DB.php \
system/database/DB_active_rec.php \
system/database/DB_cache.php \
system/database/DB_driver.php \
system/database/DB_forge.php \
system/database/DB_result.php \
system/database/DB_utility.php \
system/database/drivers/cubrid/cubrid_driver.php \
system/database/drivers/cubrid/cubrid_forge.php \
system/database/drivers/cubrid/cubrid_result.php \
system/database/drivers/cubrid/cubrid_utility.php \
system/database/drivers/cubrid/index.html \
system/database/drivers/index.html \
system/database/drivers/mssql/index.html \
system/database/drivers/mssql/mssql_driver.php \
system/database/drivers/mssql/mssql_forge.php \
system/database/drivers/mssql/mssql_result.php \
system/database/drivers/mssql/mssql_utility.php \
system/database/drivers/mysql/index.html \
system/database/drivers/mysql/mysql_driver.php \
system/database/drivers/mysql/mysql_forge.php \
system/database/drivers/mysql/mysql_result.php \
system/database/drivers/mysql/mysql_utility.php \
system/database/drivers/mysqli/index.html \
system/database/drivers/mysqli/mysqli_driver.php \
system/database/drivers/mysqli/mysqli_forge.php \
system/database/drivers/mysqli/mysqli_result.php \
system/database/drivers/mysqli/mysqli_utility.php \
system/database/drivers/oci8/index.html \
system/database/drivers/oci8/oci8_driver.php \
system/database/drivers/oci8/oci8_forge.php \
system/database/drivers/oci8/oci8_result.php \
system/database/drivers/oci8/oci8_utility.php \
system/database/drivers/odbc/index.html \
system/database/drivers/odbc/odbc_driver.php \
system/database/drivers/odbc/odbc_forge.php \
system/database/drivers/odbc/odbc_result.php \
system/database/drivers/odbc/odbc_utility.php \
system/database/drivers/pdo/index.html \
system/database/drivers/pdo/pdo_driver.php \
system/database/drivers/pdo/pdo_forge.php \
system/database/drivers/pdo/pdo_result.php \
system/database/drivers/pdo/pdo_utility.php \
system/database/drivers/postgre/index.html \
system/database/drivers/postgre/postgre_driver.php \
system/database/drivers/postgre/postgre_forge.php \
system/database/drivers/postgre/postgre_result.php \
system/database/drivers/postgre/postgre_utility.php \
system/database/drivers/sqlite/index.html \
system/database/drivers/sqlite/sqlite_driver.php \
system/database/drivers/sqlite/sqlite_forge.php \
system/database/drivers/sqlite/sqlite_result.php \
system/database/drivers/sqlite/sqlite_utility.php \
system/database/drivers/sqlsrv/index.html \
system/database/drivers/sqlsrv/sqlsrv_driver.php \
system/database/drivers/sqlsrv/sqlsrv_forge.php \
system/database/drivers/sqlsrv/sqlsrv_result.php \
system/database/drivers/sqlsrv/sqlsrv_utility.php \
system/database/index.html \
system/fonts/index.html \
system/fonts/texb.ttf \
system/helpers/array_helper.php \
system/helpers/captcha_helper.php \
system/helpers/cookie_helper.php \
system/helpers/date_helper.php \
system/helpers/directory_helper.php \
system/helpers/download_helper.php \
system/helpers/email_helper.php \
system/helpers/file_helper.php \
system/helpers/form_helper.php \
system/helpers/html_helper.php \
system/helpers/index.html \
system/helpers/inflector_helper.php \
system/helpers/language_helper.php \
system/helpers/number_helper.php \
system/helpers/path_helper.php \
system/helpers/security_helper.php \
system/helpers/smiley_helper.php \
system/helpers/string_helper.php \
system/helpers/text_helper.php \
system/helpers/typography_helper.php \
system/helpers/url_helper.php \
system/helpers/xml_helper.php \
system/index.html \
system/language/english/calendar_lang.php \
system/language/english/date_lang.php \
system/language/english/db_lang.php \
system/language/english/email_lang.php \
system/language/english/form_validation_lang.php \
system/language/english/ftp_lang.php \
system/language/english/imglib_lang.php \
system/language/english/index.html \
system/language/english/migration_lang.php \
system/language/english/number_lang.php \
system/language/english/profiler_lang.php \
system/language/english/unit_test_lang.php \
system/language/english/upload_lang.php \
system/language/index.html \
system/libraries/Calendar.php \
system/libraries/Cart.php \
system/libraries/Driver.php \
system/libraries/Email.php \
system/libraries/Encrypt.php \
system/libraries/Form_validation.php \
system/libraries/Ftp.php \
system/libraries/Image_lib.php \
system/libraries/index.html \
system/libraries/javascript/Jquery.php \
system/libraries/Javascript.php \
system/libraries/Log.php \
system/libraries/Migration.php \
system/libraries/Pagination.php \
system/libraries/Parser.php \
system/libraries/Profiler.php \
system/libraries/Session.php \
system/libraries/Sha1.php \
system/libraries/Table.php \
system/libraries/Trackback.php \
system/libraries/Typography.php \
system/libraries/Unit_test.php \
system/libraries/Upload.php \
system/libraries/User_agent.php \
system/libraries/Xmlrpc.php \
system/libraries/Xmlrpcs.php \
system/libraries/Zip.php

install-am:
        rsync -r application index.php prototype.js refresh.js resources status_block_wide.png status_style.css system $(DESTDIR)/${pkgmyemslstatusdir}/

