SUBDIRS = icons
pkgmyemslstaticdataonedir = $(pkgmyemslstaticdatadir)/1
pkgmyemslstaticdataone_DATA = label_over.js moreinfo.png turtle.png

#http://openiconlibrary.sourceforge.net/gallery2/open_icon_library-full/icons/png/16x16/actions/mail-find.png moreinfo.png lgpl2.1
#turtle.png copied from pidgin. GPL.

EXTRA_DIST = $(pkgmyemslstaticdataone_DATA)
