SUBDIRS = icons
pkgmyemslstaticdataonedir = $(pkgmyemslstaticdatadir)/1
pkgmyemslstaticdataone_DATA = label_over.js moreinfo.png turtle.png myemsl-find.png

#http://openiconlibrary.sourceforge.net/gallery2/open_icon_library-full/icons/png/16x16/actions/mail-find.png moreinfo.png lgpl2.1
#turtle.png copied from pidgin. GPL.

#myemsl-find.png is based on the two following files plus further modifications:
#http://icons.iconarchive.com/icons/everaldo/crystal-clear/128/App-database-icon.png lgpl
#http://icons.iconarchive.com/icons/icojam/blue-bits/96/search-icon.png public domain

EXTRA_DIST = $(pkgmyemslstaticdataone_DATA) myemsl-find.xcf
