pkgmyemslstaticdataoneiconsdir = $(pkgmyemslstaticdatadir)/1/icons
pkgmyemslstaticdataoneicons_DATA = \
/usr/lib/pacifica/builddeps/fileicons/7z.png \
/usr/lib/pacifica/builddeps/fileicons/aiff.png \
/usr/lib/pacifica/builddeps/fileicons/ai.png \
/usr/lib/pacifica/builddeps/fileicons/asc.png \
/usr/lib/pacifica/builddeps/fileicons/audio.png \
/usr/lib/pacifica/builddeps/fileicons/bin.png \
/usr/lib/pacifica/builddeps/fileicons/bz2.png \
/usr/lib/pacifica/builddeps/fileicons/cfc.png \
/usr/lib/pacifica/builddeps/fileicons/cfm.png \
/usr/lib/pacifica/builddeps/fileicons/chm.png \
/usr/lib/pacifica/builddeps/fileicons/class.png \
/usr/lib/pacifica/builddeps/fileicons/conf.png \
/usr/lib/pacifica/builddeps/fileicons/c.png \
/usr/lib/pacifica/builddeps/fileicons/cpp.png \
/usr/lib/pacifica/builddeps/fileicons/cs.png \
/usr/lib/pacifica/builddeps/fileicons/css.png \
/usr/lib/pacifica/builddeps/fileicons/csv.png \
/usr/lib/pacifica/builddeps/fileicons/deb.png \
/usr/lib/pacifica/builddeps/fileicons/divx.png \
/usr/lib/pacifica/builddeps/fileicons/doc.png \
/usr/lib/pacifica/builddeps/fileicons/dot.png \
/usr/lib/pacifica/builddeps/fileicons/eml.png \
/usr/lib/pacifica/builddeps/fileicons/enc.png \
/usr/lib/pacifica/builddeps/fileicons/file.png \
/usr/lib/pacifica/builddeps/fileicons/gif.png \
/usr/lib/pacifica/builddeps/fileicons/gz.png \
/usr/lib/pacifica/builddeps/fileicons/hlp.png \
/usr/lib/pacifica/builddeps/fileicons/html.png \
/usr/lib/pacifica/builddeps/fileicons/htm.png \
/usr/lib/pacifica/builddeps/fileicons/image.png \
/usr/lib/pacifica/builddeps/fileicons/iso.png \
/usr/lib/pacifica/builddeps/fileicons/jar.png \
/usr/lib/pacifica/builddeps/fileicons/java.png \
/usr/lib/pacifica/builddeps/fileicons/jpeg.png \
/usr/lib/pacifica/builddeps/fileicons/jpg.png \
/usr/lib/pacifica/builddeps/fileicons/js.png \
/usr/lib/pacifica/builddeps/fileicons/lua.png \
/usr/lib/pacifica/builddeps/fileicons/mm.png \
/usr/lib/pacifica/builddeps/fileicons/mov.png \
/usr/lib/pacifica/builddeps/fileicons/mp3.png \
/usr/lib/pacifica/builddeps/fileicons/mpg.png \
/usr/lib/pacifica/builddeps/fileicons/m.png \
/usr/lib/pacifica/builddeps/fileicons/odc.png \
/usr/lib/pacifica/builddeps/fileicons/odf.png \
/usr/lib/pacifica/builddeps/fileicons/odg.png \
/usr/lib/pacifica/builddeps/fileicons/odi.png \
/usr/lib/pacifica/builddeps/fileicons/odp.png \
/usr/lib/pacifica/builddeps/fileicons/ods.png \
/usr/lib/pacifica/builddeps/fileicons/odt.png \
/usr/lib/pacifica/builddeps/fileicons/ogg.png \
/usr/lib/pacifica/builddeps/fileicons/pdf.png \
/usr/lib/pacifica/builddeps/fileicons/pgp.png \
/usr/lib/pacifica/builddeps/fileicons/php.png \
/usr/lib/pacifica/builddeps/fileicons/pl.png \
/usr/lib/pacifica/builddeps/fileicons/png.png \
/usr/lib/pacifica/builddeps/fileicons/ppt.png \
/usr/lib/pacifica/builddeps/fileicons/ps.png \
/usr/lib/pacifica/builddeps/fileicons/py.png \
/usr/lib/pacifica/builddeps/fileicons/ram.png \
/usr/lib/pacifica/builddeps/fileicons/rar.png \
/usr/lib/pacifica/builddeps/fileicons/rb.png \
/usr/lib/pacifica/builddeps/fileicons/rm.png \
/usr/lib/pacifica/builddeps/fileicons/rpm.png \
/usr/lib/pacifica/builddeps/fileicons/rtf.png \
/usr/lib/pacifica/builddeps/fileicons/sig.png \
/usr/lib/pacifica/builddeps/fileicons/sql.png \
/usr/lib/pacifica/builddeps/fileicons/swf.png \
/usr/lib/pacifica/builddeps/fileicons/sxc.png \
/usr/lib/pacifica/builddeps/fileicons/sxd.png \
/usr/lib/pacifica/builddeps/fileicons/sxi.png \
/usr/lib/pacifica/builddeps/fileicons/sxw.png \
/usr/lib/pacifica/builddeps/fileicons/tar.png \
/usr/lib/pacifica/builddeps/fileicons/tex.png \
/usr/lib/pacifica/builddeps/fileicons/tgz.png \
/usr/lib/pacifica/builddeps/fileicons/txt.png \
/usr/lib/pacifica/builddeps/fileicons/vcf.png \
/usr/lib/pacifica/builddeps/fileicons/video.png \
/usr/lib/pacifica/builddeps/fileicons/vsd.png \
/usr/lib/pacifica/builddeps/fileicons/wav.png \
/usr/lib/pacifica/builddeps/fileicons/wma.png \
/usr/lib/pacifica/builddeps/fileicons/wmv.png \
/usr/lib/pacifica/builddeps/fileicons/xls.png \
/usr/lib/pacifica/builddeps/fileicons/xml.png \
/usr/lib/pacifica/builddeps/fileicons/xpi.png \
/usr/lib/pacifica/builddeps/fileicons/xvid.png \
/usr/lib/pacifica/builddeps/fileicons/zip.png
